# llmzoomcamp-project

./: .dockerignore  .env.example  .gitignore  DATA_ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  ingest.py  notebook.ipynb  pyproject.toml  requirements.txt  utils.py
app/: .dockerignore  Dockerfile  app.py  database.py  docker-compose.yml  init.sql  llm_assistant.py  requirements.txt
data/: squad_v2_500.csv  squad_v2_600.json
grafana/dashboards/: llm-rag-dashboard.json
grafana/provisioning/datasources/: postgres.yml
qdrant_storage/: raft_state.json
qdrant_storage/collections/squad_rag/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/squad_rag/0/segments/41392f15-d9b5-427f-ae85-07ea2970047f/: mutable_id_tracker.mappings  segment.json
qdrant_storage/collections/squad_rag/0/segments/48c56242-4bb9-469d-91a1-075c1af240f6/: mutable_id_tracker.mappings  segment.json
qdrant_storage/collections/squad_rag/0/segments/4d56eee5-023b-4a99-8c73-84905be77447/: mutable_id_tracker.mappings  segment.json
qdrant_storage/collections/squad_rag/0/segments/8005ecf3-b2af-44b5-b566-7c7749f509d1/: mutable_id_tracker.mappings
qdrant_storage/collections/squad_rag/0/segments/88e51a04-34b0-4a9a-87ab-dce48881d4ae/: mutable_id_tracker.mappings
qdrant_storage/collections/squad_rag/0/segments/8a21fd1c-40e5-40fa-a625-0b30d64f4fce/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/squad_rag/0/segments/9e899312-5fb3-4cd1-b83e-0b2b95babb78/: mutable_id_tracker.mappings
(+50 files in other folders)
