[project]
name = "llm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "fastapi>=0.119.0",
    "fastembed>=0.7.3",
    "fastmcp>=2.12.4",
    "groq>=0.32.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "notebook>=7.4.7",
    "pgcli>=4.3.0",
    "ruff>=0.14.0",
]
